<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"  
        android:text="@string/trip_date"/>
    
    <TextView
        android:id="@+id/tripDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"  />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"  
        android:text="@string/trip_destination"/>
    
    <TextView
        android:id="@+id/tripDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"  /> 
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"  
        android:text="@string/friend_name"/>
    
    <TextView
        android:id="@+id/friendName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"  />  
     
    
    
 
</LinearLayout>
