<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:id ="@+id/tripdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/trip_date"/>
    <EditText
        android:id="@+id/create_trip_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hint_date"
        android:cursorVisible="false"
        android:selectAllOnFocus="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/trip_time"/>
    <EditText
        android:id="@+id/create_trip_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hint_time"
        android:cursorVisible="false"
        android:selectAllOnFocus="true" />
     </LinearLayout>

     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
         <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="vertical">
             <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"  
        android:text="@string/trip_destination"/>
    <EditText
        android:id="@+id/search_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:hint="@string/hint_destination"
        android:selectAllOnFocus="true" />
    </LinearLayout>
    
                          <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"  
        android:text="Search Theme:"/>
    <EditText
        android:id="@+id/search_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:hint="search theme"
        android:selectAllOnFocus="true" />
        </LinearLayout>
    </LinearLayout>
        <Button
        android:id="@+id/btsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search" />
    </LinearLayout>
        


    
         
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="@string/friend_name"/>
    <EditText
        android:id="@+id/create_trip_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:hint="@string/hint_friends"
        android:selectAllOnFocus="true" />
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Location result:"/>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Name:"/>
    <TextView
        android:id="@+id/locname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Address:"/>
    <TextView
        android:id="@+id/locaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Latitude:"/>
    <TextView
        android:id="@+id/loclat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"  
        android:text="Longitude"/>
    <TextView
        android:id="@+id/loclgt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp">
    <Button
        android:id="@+id/create_trip_cancel_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"  
        android:layout_marginLeft="40dp"
        android:text="@string/create_trip_cancel_button"/>
    <Button
        android:id="@+id/create_trip_submit_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/create_trip_submit_button"/>
    </LinearLayout>

    

</LinearLayout>
